<resources>
    <string name="app_name">Rick and Morty wiki</string>
    <string name="element_text">some text</string>
    <string name="episode_tag_template">S01E04</string>
    <string name="status_title">Status:</string>
    <string name="name_title">Name:</string>
    <string name="gender_title">Gender:</string>
    <string name="location_title">Location:</string>
    <string name="episodes_title">Episodes</string>
    <string name="appears_in_title">Appears in:</string>
    <string name="load_more_btn">Load More</string>
    <string name="no_content_found">No content found..</string>
    <string name="something_went_wrong">Sorry, Something went wrong</string>
    <string name="oops">Oops..</string>
</resources>