<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/characterInfoToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        android:background="@color/black"
        app:title=""
        app:titleTextColor="@color/white"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_marginHorizontal="10dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/characterInfoImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxWidth="250dp"
            android:maxHeight="250dp"
            android:background="@drawable/rounded_outline"
            android:scaleType="centerInside"
            android:scaleX="2"
            android:scaleY="2"
            android:adjustViewBounds="true"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/rounded_corner"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="2dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:background="@color/white"
                    android:text="@string/name_title"
                    android:textStyle="bold"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium.Inverse"
                    android:layout_marginRight="5dp"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/characterInfoNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:textColor="@color/black"
                    android:background="@color/white"
                    android:text="@string/element_text"
                    tools:ignore="MissingConstraints" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="2dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:background="@color/white"
                    android:text="@string/status_title"
                    android:textStyle="bold"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium.Inverse"
                    android:layout_marginRight="5dp"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/characterInfoStatusTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:background="@color/white"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:text="@string/element_text"
                    tools:ignore="MissingConstraints" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="2dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:background="@color/white"
                    android:text="@string/gender_title"
                    android:textStyle="bold"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium.Inverse"
                    android:layout_marginRight="5dp"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/characterInfoGenderTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:background="@color/white"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:text="@string/element_text"
                    tools:ignore="MissingConstraints" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="2dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:background="@color/white"
                    android:text="@string/location_title"
                    android:textStyle="bold"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium.Inverse"
                    android:layout_marginRight="5dp"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/characterInfoLocationTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:background="@color/white"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:text="@string/element_text"
                    tools:ignore="MissingConstraints" />
            </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:background="@color/white"
                    android:text="@string/appears_in_title"
                    android:textStyle="bold"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium.Inverse"
                    android:layout_marginRight="5dp"
                    tools:ignore="MissingConstraints" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner"
                android:layout_marginVertical="5dp"
                android:orientation="vertical">


                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/character_info_recycler_view"
                    tools:listitem="@layout/character_info_episode_item"
                    tools:itemCount="3"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>